Updating minimum required JRE to Java 5.  Updated RText plugin to scrape scripts from purezc.net instead of the now-defunct purezc.com.  Adding syntax checking for extra comma in function argument list.